--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- font-awesome-cdn  -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
+    <!-- main css  -->
+    <link rel="stylesheet" href="bank.css">
 </head>
 
 <body>
@@ -55,10 +58,10 @@
                         <div action="" class="flex flex-col justify-center items-center">
                             <h2 class="my-2 font-semibold text-3xl text-center text-white">Diposit Now</h2>
                             <div class="mt-6 flex">
-                                <i class="far fa-envelope-open pr-3 text-xl "></i>
+                                <i class="fas fa-university fa-2x"></i>
                                 <input type="number" name="" id="inputDeposit"
                                     placeholder="$ Enter amount you want to deposit"
-                                    class="border-b-2 capitalize focus:outline-none focus:border-blue-600 w-80">
+                                    class="border-b-2 capitalize focus:outline-none focus:border-blue-600 w-80 p-1">
                             </div>
 
                             <button id="deposit-btn"
@@ -72,10 +75,10 @@
                         <div action="" class="flex flex-col justify-center items-center">
                             <h2 class="my-2 font-semibold text-3xl text-center text-white">Withdraw Now</h2>
                             <div class="mt-6 flex">
-                                <i class="far fa-envelope-open pr-3 text-xl "></i>
+                                <i class="fas fa-money-check-alt fa-2x"></i>
                                 <input type="number" name="" id="inputWithdraw"
                                     placeholder="$ Enter amount you want to withdraw"
-                                    class="border-b-2 capitalize focus:outline-none focus:border-blue-600 w-80">
+                                    class="border-b-2 capitalize focus:outline-none focus:border-blue-600 w-80 p-1">
                             </div>
 
                             <button id="withdraw-btn"
